dataset1235/2025-2/805158916/users/2550781990/executions/71079933_3788368433.log
== RUN (2025-08-13 15:27:21)
-- CODE: 
# Use este codigo como ponto de partida
print("Gandalf")
# Leitura de valores de entrada
var = imput(print("Gandalf"))

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = imput(print("Gandalf"))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = imput(print("Gandalf"))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = imput(print("Gandalf"))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = imput(print("Gandalf"))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = imput(print("Gandalf"))
          ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:27:03)
-- CODE: 
# Use este codigo como ponto de partida
print(Gandalf)
# Leitura de valores de entrada
var = imput(print(Gandalf))

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:25:38)
-- CODE: 
# Use este codigo como ponto de partida
print(Gandalf)
# Leitura de valores de entrada
nome = imput(print)

# Impressao de saidas
print(nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 15:27:44)
-- CODE: 
# Use este codigo como ponto de partida
print("Gandalf")
# Leitura de valores de entrada
var = input(print("Gandalf"))

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
NoneGandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
NoneDonald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
NonePython
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
NoneAda Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
NoneTeste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 15:29:45)
-- CODE: 
# Use este codigo como ponto de partida
print("Gandalf")
# Leitura de valores de entrada
var = input(print("Gandalf"))

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
NoneGandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
NoneDonald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
NonePython
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
NoneAda Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
NoneTeste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
